[package]
name = "radar"
version = "0.6.0"
edition = "2021"
description = "项目依赖关系分析工具，支持多语言和多种输出格式"
authors = []

[[bin]]
name = "radar"
path = "src/main.rs"

[dependencies]
# CLI 参数解析
clap = { version = "4", features = ["derive"] }
# 目录遍历
walkdir = "2"
# 序列化/反序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 图数据结构
petgraph = { version = "0.6", features = ["serde-1"] }
# 正则表达式
regex = "1"
# 错误处理
anyhow = "1"
# 终端着色
colored = "2"
# 进度条
indicatif = "0.17"
# 遵守 .gitignore 规则的文件遍历
ignore = "0.4"
# 并行处理
rayon = "1"
# 一次性编译正则（lazy_static 的现代替代）
once_cell = "1"
# 派生式错误类型
thiserror = "1"
# Glob 模式匹配（用于 --include/--exclude）
globset = "0.4"
# tree-sitter 核心
tree-sitter = "0.22"
# 各语言语法
tree-sitter-rust = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-go = "0.21"
tree-sitter-python = "0.21"
